[package]
name = "reloaded3_localisation"
version = "0.2.0"
edition = "2024"
description = "Localisation System Test for Reloaded 3"
repository = "https://github.com/TheBestAstroNOT/reloaded3.localisation"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
additional_locale_safety_checks = []
std = []
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Feature for enabling C library exports.
c-exports = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.6.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"


# Benchmark Stuff
[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark/main.rs"
harness = false

[dependencies]
hashbrown = "0.16.1"
lite-strtab = "0.2.0"
memchr = "2.7.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
